[package]
name = "expat-sys"
version = "2.1.4"
authors = ["Expat maintainers and Servo developers"]
links = "expat"
build = "build.rs"
repository = "https://github.com/servo/libexpat/"
license = "MIT"
description = "XML parser library written in C"
homepage = "http://www.libexpat.org/"


[lib]
name = "expat_sys"
path = "lib.rs"

[build-dependencies]
cmake = "0.1"
pkg-config = "0.3"
